--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   */
 
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -178,3 +179,13 @@ footer {
   font-size: 14px;
 }
 
+/* Media Queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
